# Knowledge-Chat

./: .env.example  README.md  docker-compose.yml  up.sh
app/backend/: .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
app/backend/src/Domain/Entities/: KnowledgeSource.py  Sessions.py
app/backend/src/Domain/Interfaces/: IAgentProvider.py  IKnowledgeBaseProvider.py  ISessionRepository.py  IStorageProvider.py
app/backend/src/Domain/Services/: ChatManager.py
app/backend/src/Domain/ValueObjects/: DocumentKey.py  SessionId.py
app/backend/src/application/dtos/: chat_dtos.py  document_dtos.py
app/backend/src/application/use_cases/: AddKnowledgeToSession.py  GetSessionDocuments.py  TerminateSession.py  ask_agent_use_case.py
app/backend/src/infrastructure/aws/: KnowledgeBase.py  S3Client.py  bedrock_agent.py
app/backend/src/presentation/api/: dependencies.py  main.py
app/backend/src/presentation/api/controllers/: chat_controller.py  document_controller.py  session_controller.py
app/frontend/my-app/: Dockerfile
app/frontend/my-app/app/: layout.tsx  page.tsx
app/frontend/my-app/app/components/: ChatInterface.tsx  SessionGate.tsx
src/application/dtos/: chat_dtos.py  document_dtos.py
src/application/use_cases/: AddKnowledgeToSession.py  ask_agent_use_case.py
src/infrastructure/aws/: KnowledgeBase.py  S3Client.py  bedrock_agent.py
src/infrastructure/utils/: bedrock_response_parser.py  logger.py
src/presentation/api/: main.py
src/presentation/api/controllers/: chat_controller.py  document_controller.py
(+1 files in other folders)
